Change in composer details

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "eskandari/persianrender",
+    "name": "patriotblog/fa-gd",
     "type": "library",
-    "description": "PersianRender,Free persian letter conertor for using in php GD, etc.",
+    "description": "PPersianRender,Free persian letter convertor for using in php GD, etc. This Library forked from https://github.com/mahmoud-eskandari/PersianRender",
     "keywords": ["text","image","gd","render","persian","persianletter"],
-    "homepage": "http://webafrooz.com",
+    "homepage": "https://github.com/patriotblog/fa-gd",
     "license": "GNU",
     "authors": [
         {
-            "name": "Mahmoud Eskandari",
-            "email": "info@webafrooz.com"
+            "name": " MohammadAli Taebi",
+            "email": "taebi.ali@gmail.com"
         }
     ],
     "require": {
